--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ description = ""
 authors = ["Ananyobrata Pal <ananyo141@gmail.com>"]
 license = "GPLv3"
 # readme = "README.md"
-packages = [{include = "backend"}]
+packages = [{include = "smartshala"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -39,6 +39,7 @@ dj-database-url = "^1.2.0"
 psycopg2-binary = "^2.9.5"
 whitenoise = {extras = ["brotli"], version = "^6.4.0"}
 drf-spectacular = "^0.26.0"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
